# crop-scanned-photos

./: .coveragerc  .gitignore  Makefile  README  create_test_image.py  crop.py  pyproject.toml
.github/workflows/: build.yml  publish.yml  python-package.yml  test.yml
crop_scanned_photos/: __init__.py  main.py
test/: __init__.py  test_crop.py
utils/: __init__.py  create_test_image.py
